# exercises

./: .gitignore  Cargo.toml  build-aoc.sh  init-aoc  run-aoc.sh  test-aoc.sh
aoc-helpers/: Cargo.toml
aoc-helpers/src/: lib.rs
aoc-helpers/src/lib/: lib.rs  math.rs  parsing.rs
aoc-runner/: Cargo.toml
aoc-runner/src/: main.rs
aoc2015/: Cargo.toml
aoc2015/examples/day1/: day.rs  main.rs
aoc2015/examples/day10/: day.rs
aoc2015/examples/day11/: day.rs
aoc2015/examples/day12/: day.rs
aoc2015/examples/day13/: day.rs
aoc2015/examples/day14/: day.rs
aoc2015/examples/day2/: day.rs
aoc2015/examples/day22/: day.rs
aoc2015/examples/day3/: day.rs
aoc2015/examples/day4/: day.rs
aoc2015/examples/day5/: day.rs
aoc2015/examples/day6/: day.rs
aoc2015/examples/day7/: day.rs  main.rs
aoc2015/examples/day8/: day.rs
aoc2015/examples/day9/: day.rs
aoc2015/src/: circuit.rs  prompt.rs
aoc2015/src/lib/: lib.rs
aoc2020/: Cargo.toml
aoc2020/examples/day1/: day.rs
aoc2020/examples/day10/: day.rs
aoc2020/examples/day11/: day.rs
aoc2020/examples/day12/: day.rs
aoc2020/examples/day13/: day.rs
aoc2020/examples/day14/: day.rs
aoc2020/examples/day15/: day.rs
aoc2020/examples/day16/: day.rs
aoc2020/examples/day17/: day.rs
aoc2020/examples/day18/: day.rs
aoc2020/examples/day19/: day.rs
aoc2020/examples/day2/: day.rs
aoc2020/examples/day20/: day.rs
aoc2020/examples/day21/: day.rs
aoc2020/examples/day22/: day.rs
aoc2020/examples/day23/: day.rs
aoc2020/examples/day24/: day.rs
aoc2020/examples/day25/: day.rs
aoc2020/examples/day3/: day.rs
aoc2020/examples/day4/: day.rs
aoc2020/examples/day5/: day.rs
aoc2020/examples/day6/: day.rs
aoc2020/examples/day7/: day.rs
aoc2020/examples/day8/: day.rs
aoc2020/examples/day9/: day.rs
aoc2021/: Cargo.toml
aoc2021-rockstar/: LICENSE  README.md  play  rockstar
aoc2021-rockstar/songs/day1/: day1.rock  day1_b_side.rock
aoc2021-rockstar/songs/day2/: day2.rock  day2_b_side.rock
aoc2021/examples/day1/: day.rs  main.rs
aoc2021/examples/day11/: day.rs
aoc2021/examples/day15/: day.rs
aoc2021/examples/day16/: day.rs
aoc2021/examples/day17/: day.rs
aoc2021/examples/day2/: day.rs
aoc2021/examples/day20/: day.rs
aoc2021/examples/day21/: day.rs
aoc2021/examples/day25/: day.rs
aoc2021/src/: day1.rs  day11.rs  day14.rs  day16.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day3.rs  day4.rs  day6.rs  day7.rs  day8.rs  lib.rs
aoc2023/: Cargo.toml
aoc2024/: .gitignore  build.zig
aoc2024/src/: main.zig  runner.zig
cargo-init-aoc/: Cargo.toml
cargo-init-aoc/src/: main.rs
data-structures/: Cargo.toml
data-structures/src/: binary_node.rs  heap.rs  lib.rs
prompter/: Cargo.toml
prompter/src/: lib.rs
(+23 files in other folders)
