[package]
name = "aoc-helpers"
version = "0.1.0"
authors = ["Eric Rinkus <ejrinkus@gmail.com>"]
edition = "2021"

[lib]
name = "aoc_helpers"
path = "src/lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = "1.7.2"
