[package]
name = "aoc-runner"
version = "0.1.0"
authors = ["Eric Rinkus <ejrinkus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc2021 = { path = "../aoc2021" }
chrono = "0.4"
futures = "0.3"
reqwest = "0.11.7"
tokio = { version = "1", features = ["full"] }
