[package]
name = "aoc2023"
version = "0.1.0"
authors = ["Eric Rinkus <ejrinkus@gmail.com>"]
edition = "2021"

[lib]
name = "aoc_2023_libs"
path = "src/lib/lib.rs"

[[bin]]
name = "day1"

[[bin]]
name = "day2"

[[bin]]
name = "day3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-helpers = { path = "../aoc-helpers" }
regex = "1"
