[package]
name = "aoc2023"
version = "0.1.0"
authors = ["Eric Rinkus <ejrinkus@gmail.com>"]
edition = "2021"

[lib]
name = "aoc_2023_libs"
path = "src/lib/lib.rs"

[[bin]]
name = "day1"

[[bin]]
name = "day2"

[[bin]]
name = "day3"

[[bin]]
name = "day4"

[[bin]]
name = "day5"

[[bin]]
name = "day6"

[[bin]]
name = "day7"

[[bin]]
name = "day8"

[[bin]]
name = "day9"

[[bin]]
name = "day10"

[[bin]]
name = "day11"

[[bin]]
name = "day12"

[[bin]]
name = "day13"

[[bin]]
name = "day14"

[[bin]]
name = "day15"

[[bin]]
name = "day16"

[[bin]]
name = "day17"

[[bin]]
name = "day18"

[[bin]]
name = "day19"

[[bin]]
name = "day20"

[[bin]]
name = "day21"

[[bin]]
name = "day22"

[[bin]]
name = "day23"

[[bin]]
name = "day24"

[[bin]]
name = "day25"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-helpers = { path = "../aoc-helpers" }
regex = "1"
